2014-10-28  Dana Burkart  <dburkart@apple.com>

        Merge r174321. <rdar://problem/18753175>

    2014-10-04  Timothy Horton  <timothy_horton@apple.com>
    
            Try to fix the Windows build after r174315.
    
            * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in:
    
2014-10-28  Dana Burkart  <dburkart@apple.com>

        Merge r174320. <rdar://problem/18753175>

    2014-10-04  Timothy Horton  <timothy_horton@apple.com>
    
            Try to fix the Windows build after r174315.
    
            * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in:
    
2014-08-15  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r172019. <rdar://problem/18029617>

    2014-08-04  Matthew Hanson  <matthew_hanson@apple.com>
    
            [Win] Temporarily deactivate WebGL.
            https://bugs.webkit.org/show_bug.cgi?id=135543
    
            Unreviewed build fix.
    
            Landed on behalf of Brent Fulgham.
    
            * WebKit.vcxproj/WebKit/WebKitCommon.props: Avoid
            linking to ANGLE-based libraries.
    
2014-08-07  Dana Burkart <dburkart@apple.com>

        Merge r172241

    2014-08-07  Timothy Hatcher  <timothy@apple.com>

            Web Inspector: Update glyphs to be more like Xcode 6
            https://bugs.webkit.org/show_bug.cgi?id=135705

            Reviewed by Joseph Pecoraro.

            * WebKit.xcodeproj/project.pbxproj: Added new images.

2014-07-30  Lucas Forschler  <lforschler@apple.com>

        Merge r171825

    2014-07-29  Brent Fulgham  <bfulgham@apple.com>
    
            [Win] Modify version numbering scheme to support 5-tuple versions
            https://bugs.webkit.org/show_bug.cgi?id=135400
            <rdar://problem/17849033>
    
            Reviewed by David Kilzer.
    
            * WebKit.vcxproj/WebKit/WebKitPostBuild.cmd: Use the new
            version-stamp.pl script to version JavaScriptCore.dll.

2014-07-09  Brent Fulgham  <bfulgham@apple.com>
